[gd_scene load_steps=6 format=3 uid="uid://cqkhuxq353ect"]

[ext_resource type="Script" path="res://Scripts/human.gd" id="1_3ms4j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1v5b0"]
height = 44.0

[sub_resource type="Animation" id="Animation_xbirm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Holding:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Holding:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.4, 1.4)]
}

[sub_resource type="Animation" id="Animation_5q040"]
resource_name = "dipbowl"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Holding:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 100), Vector2(0, 100), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Holding:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 2.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4), Vector2(1.4, 1.4), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vkwtv"]
_data = {
"RESET": SubResource("Animation_xbirm"),
"dipbowl": SubResource("Animation_5q040")
}

[node name="human" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_3ms4j")

[node name="Body" type="Sprite2D" parent="."]

[node name="Holding" type="Sprite2D" parent="."]
scale = Vector2(1.4, 1.4)

[node name="humanArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="humanArea"]
shape = SubResource("CapsuleShape2D_1v5b0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vkwtv")
}

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(73.3333, 0)
collide_with_areas = true

[connection signal="area_entered" from="humanArea" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="humanArea" to="." method="_on_area_2d_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
